fix(raft): iterate membership in id order so runs are reproducible
CI caught this on the second JDK in the matrix: SimTest.crashedFollowerCatchesUp
failed on JDK 25 while passing on 21, and passed locally on both.

RaftConfig kept its voters in a Set.copyOf, whose iteration order is
randomized per JVM by design. The core iterates the membership to decide the
order it sends vote requests and heartbeats in, so the entire message
ordering of a cluster differed between JVM invocations. The simulator's
determinism test could not see it, because it replays both runs inside one
JVM where the randomization is fixed.

Membership is now sorted at the config boundary and held in a TreeSet in the
core, so iteration order is a function of the node ids alone. Two tests guard
it from both sides: the config exposes voters in ascending order whatever it
was handed, and a campaign emits its vote requests in ascending recipient
order.

Worth noting what did and did not do its job here. The trace hash was the
right instrument and was pointed the wrong way; comparing two runs in one
process cannot catch a per-process seed. Running the same suite on two JDKs
is what found it.

Refs #7