@@ -8,12 +8,12 @@ import java.util.Arrays;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Random;
 import java.util.Set;
+import java.util.TreeSet;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -103,7 +103,9 @@ public final class RaftNode {
         Objects.requireNonNull(storage, "storage");
         Objects.requireNonNull(persisted, "persisted");
 
-        this.voters = new LinkedHashSet<>(cfg.initialVoters());
+        // Sorted so every iteration of the membership, and therefore the order messages are
+        // emitted in, is a function of the ids alone.
+        this.voters = new TreeSet<>(cfg.initialVoters());
         this.term = persisted.getTerm();
         this.vote = persisted.getVote();
         this.log = new RaftLog(storage, persisted.getCommit());
@@ -369,7 +371,7 @@ public final class RaftNode {
     }
 
     public Set<Long> voters() {
-        return Set.copyOf(voters);
+        return java.util.Collections.unmodifiableSet(new TreeSet<>(voters));
     }
 
     public Status status() {
